--- a/FirstBoot/index.html
+++ b/FirstBoot/index.html
@@ -1,15 +1,19 @@
+
 <html>
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
+    <script src="js/particles.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
 
 </head>
 
 <body>
+        <div id="particles-js"></div>
     <div class="container">
         <div class="firstPageContent">
+
             <div class="logo"></div>
             <span class="welcomeMessage">TigerOS</span>
             <div class="firstPageInnerContent">
@@ -19,8 +23,10 @@
 
         </div>
     </div>
+
 </body>
 <script src="./js/PageLoadAnimation.js"></script>
+<script src="./js/LoadParticles.js"></script>
 <script src="./js/ExitButton.js"></script>
 
 </html>
