Made the restart button work in the setup, made the Desktop environment with a files window working.

--- a/FirstBoot/index.html
+++ b/FirstBoot/index.html
@@ -71,7 +71,7 @@
                 <p>TigerOS is now ready to use</p>
             </div>
             <p>Click to reboot your computer.</p>
-            <div class="doneButton">
+            <div class="doneButton" onclick="restart()">
                 <i class="material-icons icon">refresh</i>
             </div>
 
