--- a/SystemUI/index.html
+++ b/SystemUI/index.html
@@ -12,7 +12,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="js/particles.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="css/ToggleSwitch.css" />
 
 </head>
 
@@ -24,14 +23,9 @@
             <div class="logo"></div>
             <span class="welcomeMessage">TigerOS</span>
             <div class="firstPageInnerContent">
-                    <div class="usernameValidationMessage"></div>
-                    <p style="font-size: 35px;">Login</p>
-                    <input class="inputTest username" type="text" placeholder="Username">
-        
-                    <input class="inputTest password" type="password" placeholder="Password">
-
-                <div class="doneButton">
-                    <i class="material-icons icon">done</i>
+                <div class="usernameValidationMessage"></div>
+                <p style="font-size: 35px;">Choose your account:</p>
+                <div class="accountsListLoginInner">
                 </div>
             </div>
 
@@ -39,9 +33,8 @@
     </div>
 
 </body>
-<script src="./js/SetupPages.js"></script>
+<script src="./js/LoginPage.js"></script>
 <script src="./js/PageLoadAnimation.js"></script>
 <script src="./js/LoadParticles.js"></script>
-<script src="./js/ExitButton.js"></script>
 
 </html>
