added more fixes and enhancements to the file manager

--- a/SystemUI/SystemInterface/Files.html
+++ b/SystemUI/SystemInterface/Files.html
@@ -9,17 +9,19 @@
             <p>
                 <b>Files</b>
             </p>
-            <p>0.3</p>
+            <p>0.607</p>
             <p>
-                <b>BETA</b>
+                <b>ALPHA</b>
             </p>
         </div>
         <div class="places">
-            <div class="place">
-                <i class="material-icons placesIcons">desktop_windows</i> Desktop
+            <div class="place desktopPlace">
+                <i class="material-icons placesIcons">desktop_windows</i>
+                <span>Desktop</span>
             </div>
-            <div class="place">
-                <i class="material-icons placesIcons">storage</i> System Files
+            <div class="place systemFilesPlace">
+                <i class="material-icons placesIcons">storage</i>
+                <span>System Files</span>
             </div>
         </div>
     </div>
